tests/should_fail/terminates/trait_impl.stderr
error: Mutually recursive functions: when calling `<u32 as Tr2>::g`...
  --> trait_impl.rs:27:5
   |
27 |     fn g() {
   |     ^^^^^^
   |
note: then `<u32 as Tr2>::g` uses the impl `<u32 as Tr2>` via the call to `f0`...
  --> trait_impl.rs:28:9
   |
28 |         f0::<u32>()
   |         ^^^^^^^^^^^
note: finally the method `<u32 as Tr2>::g` might be called
  --> trait_impl.rs:27:5
   |
27 |     fn g() {
   |     ^^^^^^

error: aborting due to 1 previous error

